Updated notebook and slides

--- a/intro-to-pi/wict-opc-pi.ipynb
+++ b/intro-to-pi/wict-opc-pi.ipynb
@@ -25,8 +25,16 @@
     "* __GPIO ports__ — these allow you to connect electronic components such as LEDs and buttons to Raspberry Pi.\n",
     "\n",
     "\n",
-    "## Raspberry pi OS \n",
-    "Your Raspberry Pi needs an operating system to work. Raspberry Pi OS can be installed using the [Raspberry Pi Imager](https://www.raspberrypi.com/software/)\n",
+    "The Raspberry Pi is small, doesn't use much power, and is relatively inexpensive.\n",
+    "\n",
+    "\n",
+    "## Raspberry pi Operating System\n",
+    "\n",
+    "An Operating System (OS) is an interface between a computer user and computer hardware.Your Raspberry Pi needs an operating system to work. It uses Linux, and in particular Raspbian.\n",
+    "\n",
+    "To install an operating system, you'll need two things: an image file, and a program that will write it to your SD card. \n",
+    "\n",
+    "Raspberry Pi OS can be installed using the [Raspberry Pi Imager](https://www.raspberrypi.com/software/)\n",
     "\n",
     "<img src=\"images/imager.png\" alt=\"drawing\" width=\"500\"/> "
    ]
@@ -37,6 +45,11 @@
    "metadata": {},
    "source": [
     "## Headless connection\n",
+    "A Raspberry Pi is considered headless when you have no monitor or keyboard connected to it. \n",
+    "\n",
+    "A headless Raspberry Pi can be useful for any situation where you don't want or need access to a monitor and keyboard.\n",
+    "\n",
+    "\n",
     "\n",
     "### Putty\n",
     "[PuTTy](https://www.putty.org/) is a software terminal emulator for Windows and Linux. It provides a text user interface to remote computers running any of its supported protocols, including SSH and Telnet.\n",
@@ -53,6 +66,37 @@
     "<td> <img src=\"images/vnc.png\" alt=\"drawing\" width=\"300\" height=\"100\" /> </td>\n",
     "<td> <img src=\"images/pi-desktop.png\" alt=\"drawing\" width=\"300\" height=\"100\" /> </td>\n",
     "</tr></table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "786afa76",
+   "metadata": {},
+   "source": [
+    "### Python \n",
+    "\n",
+    "Python is a  programming language created by Guido van Rossum, and released in 1991.\n",
+    "\n",
+    "It is used for:\n",
+    "\n",
+    "- web development (server-side),\n",
+    "- software development,\n",
+    "- mathematics,\n",
+    "- system scripting.\n",
+    "\n",
+    "Python works on different platforms (Windows, Mac, Linux, Raspberry Pi, etc) and it uses a simple syntax similar to the English language.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f6535d7",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Hello World\")"
    ]
   },
   {
@@ -118,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#edit file\n",
+    "#create and edit file\n",
     "\n",
     "nano <filename>"
    ]
@@ -254,13 +298,33 @@
    "metadata": {},
    "source": [
     "## Automation\n",
+    "\n",
+    "### Bash\n",
+    "Bash is a command language interpreter. It is widely available on various operating systems and is a default command interpreter on most Linux systems. \n",
+    "\n",
+    "\n",
+    "### Scripting\n",
+    "Scripting allows for an automatic commands execution that would otherwise be executed interactively one-by-one.\n",
+    "\n",
+    "A bash script is a text file containing instructions to be executed in order from top to bottom.\n",
+    "\n",
+    "By default, newly created files are not executable. We make them executable by use of __chmod +x FILENAME__ command.\n",
+    "\n",
+    "\n",
     "###  Crontab and bashscripts\n",
     "\n",
-    "The crontab command submits, edits, lists, or removes cron jobs. A cron job is a command run regularly at scheduled intervals. To submit a cron job, specify the crontab command with the -e flag. The crontab command invokes an editing session that allows you to create a crontab file.\n",
+    "The crontab command submits, edits, lists, or removes cron jobs.\n",
     "\n",
-    "__crontab -e__\n",
+    "A cron job is a command run regularly at scheduled intervals. \n",
+    "\n",
+    "Using cron you can execute a bashscript or Linux commands at a specific time and date. For example a sysadmin can schedule a backup job that can run every day.\n",
+    "\n",
+    "The __crontab -e__ command invokes an editing session that allows you to create a crontab file.\n",
+    "\n",
+    "\n",
     "\n",
     "A Bash Shell Script is a plain text file containing a set of various commands that we usually type in the command line. It is used to automate repetitive tasks on Linux filesystem.\n",
+    "\n",
     "\n",
     "\n",
     "To automate the image capturing process, we add the path of the bashscripts to crontab. Then schedule the scripts to run __@reboot__"
