--- a/intro-to-pi/wict-opc-pi.ipynb
+++ b/intro-to-pi/wict-opc-pi.ipynb
@@ -89,12 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7f6535d7",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello World\")"
    ]
